fix: layout shift on cmd+k

--- a/app/globals.css
+++ b/app/globals.css
@@ -134,10 +134,6 @@
     }
 }
 
-html {
-    scrollbar-gutter: stable;
-}
-
 /* MARKDOWN */
 .prose {
     line-height: 1.75;
